--- a/launchSettings.json
+++ b/launchSettings.json
@@ -2,10 +2,10 @@
   "profiles": {
     "Docker Compose": {
       "commandName": "DockerCompose",
+      "commandVersion": "1.0",
       "composeLaunchAction": "LaunchBrowser",
       "composeLaunchServiceName": "blazor-client",
       "composeLaunchUrl": "{Scheme}://localhost:{ServicePort}",
-      "commandVersion": "1.0",
       "serviceActions": {
         "basket-api": "StartDebugging",
         "basket-api-dapr": "StartWithoutDebugging",
@@ -28,7 +28,8 @@
         "webshoppingapigw": "StartWithoutDebugging",
         "webshoppingapigw-dapr": "StartWithoutDebugging",
         "webstatus": "StartWithoutDebugging",
-        "zipkin": "StartWithoutDebugging"
+        "zipkin": "StartWithoutDebugging",
+        "maildev": "StartWithoutDebugging"
       }
     }
   }
